Bug 179969 - Deleting input actions from kcm_hotkeys doesn't work
Summary: Deleting input actions from kcm_hotkeys doesn't work
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_khotkeys (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Lubos Lunak
URL:
Keywords:
: 182644 183601 185215 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-07 23:11 UTC by Michal Ziabkowski
Modified: 2009-03-04 23:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Ziabkowski 2009-01-07 23:11:41 UTC
Version:            (using Devel)
Compiler:          gcc version 4.1.2 (Gentoo 4.1.2 p1.1) 
OS:                Linux
Installed from:    Compiled sources

Steps to reproduce:
1) Open System Settings/Input Actions
2) Right-click an action and select Delete

Result:
The action is not deleted. The view switches to the KHotkeysDaemon tab.

This happens for KMenuEdit entries as well as manually added input actions.

Qt: 4.4.2
KDE: 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101))
Comment 1 Dario Andres 2009-01-07 23:41:33 UTC
Here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.2.60 (KDE 4.2.60 (KDE 4.3 >= 20090106))
kdelibs svn rev. 907011 / kdebase svn rev. 907011
on ArchLinux x86_64 - Kernel 2.6.27.10

I can't reproduce this bug. I can delete the input actions using the steps described without problems.

Can anyone else confirm this?
Comment 2 Michal Ziabkowski 2009-01-08 01:09:48 UTC
Tried removing kglobalshortcutsrc and khotkeysrc, and then running from another account with KDE settings purged. Still happens.

Here's a more detailed test case:
1) Open the Input Actions module.
2) Click New Global Shortcut / Command/Url
3) Input whatever command and set a hotkey for it
4) Click Apply
5) Right-click the action and select Delete

Incidentally, the same happens when deleting groups.
Comment 3 Dario Andres 2009-01-08 12:17:28 UTC
Mh, I'm still unable to reproduce using the same config as comment 1 and the steps described in comment 2
Comment 4 Michal Ziabkowski 2009-01-09 15:03:02 UTC
Might this be a locale-related issue, then? Two more people I asked have been able to reproduce this bug. Both use kde-l10n and the pl_PL locale, just like me.
Comment 5 Dario Andres 2009-01-09 15:05:00 UTC
It would be strange but may be...
Here I'm using no translations at all (however my LANG is "es_AR.utf8")
Comment 6 Michal Ziabkowski 2009-01-16 21:27:27 UTC
Waited for RC1, disabled the translations... The bug is still there. Is there anything I can do to help find the culprit?
Comment 7 Dario Andres 2009-02-08 00:41:31 UTC
*** Bug 183601 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2009-02-08 00:41:36 UTC
*** Bug 182644 has been marked as a duplicate of this bug. ***
Comment 9 Michael Jansen 2009-02-17 00:29:47 UTC
The problem dario is not able to reproduce is because khotkeys from 4.1 and khotkeys from 4.2 are completely different programs.

With kde 4.2 my version was released which unfortunately has not the same feature set as before. In trunk the feature set is mostly back.

Michal: You wrote "Waited for RC1, disabled the translations... The bug is still there. Is there anything I can do to help find the culprit?". Is the bug still there in 4.2? khotkeys should look completely different. No mouse gestures for example.
Comment 10 Michal Ziabkowski 2009-02-17 01:15:20 UTC
Yes, the bug is still there in 4.2.0. When trying to delete a shortcut or a group thereof, I am transported to the tab with "Start the khotkeys daemon on logon".
Comment 11 Jon Nelson 2009-02-18 15:41:34 UTC
Yes, the bug is still present in 4.2.0
Version I'm using:

kdebase4-workspace-4.2.0-200.1

from openSUSE.
Comment 12 Dario Andres 2009-02-22 15:41:53 UTC
*** Bug 185215 has been marked as a duplicate of this bug. ***
Comment 13 Michael Jansen 2009-03-04 23:22:15 UTC
SVN commit 935375 by mjansen:

SVN commit 934666 by froscher:

Fix a bug that prevented the deletion of list items if Qt was compiled with QT_NO_DEBUG.

BUG:179969

 M  +2 -1      hotkeys_tree_view.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=935375