Fix a bug that prevented the deletion of list items if Qt was compiled with QT_NO_DEBUG.

BUG:179969

svn path=/trunk/KDE/kdebase/workspace/; revision=934666